changing the about page, fixing the images so that they are not too high

--- a/src/App.css
+++ b/src/App.css
@@ -61,12 +61,11 @@ h2{
 }
 
 header{
-  height:30vh;
+  margin:10% 0;
   display:flex;
   flex-direction:column;
   align-items:flex-start;
   justify-content:center;
-  padding:50px;
 }
 
 header h1{
